--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dettaglio Utente</title>
+    <link rel="stylesheet" href="static/index.css">
+    <script defer src="script.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="card">
+        <div class="profile">
+            <img id="user-photo" alt="Foto Utente">
+            <h2 id="user-name"></h2>
+            <p id="user-gender"></p>
+        </div>
+        <div class="user-details">
+            <h3>Dettagli</h3>
+            <p><i class="fas fa-envelope"></i> <span id="user-email"></span></p>
+            <p><i class="fas fa-map-marker-alt"></i> <span id="user-address"></span></p>
+            <p><i class="fas fa-phone"></i> <span id="user-phone"></span></p>
+            <p><i class="fas fa-birthday-cake"></i> <span id="user-dob"></span></p>
+        </div>
+    </div>
+    <link rel="" href="static/index.js">
 </body>
 </html>
