--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dettaglio Utente</title>
     <link rel="stylesheet" href="static/index.css">
-    <script defer src="script.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -23,6 +22,7 @@
             <p><i class="fas fa-birthday-cake"></i> <span id="user-dob"></span></p>
         </div>
     </div>
-    <link rel="" href="static/index.js">
+        <script src="static/index.js"></script>
+
 </body>
 </html>
